[INTERNAL][FIX] sap.f.ShellBar: Fixed visual misalignment
The sap.f.Shellbar`s height and box-shadow are now aligned to the SAP 
Fiori 3 themes specifications.

BCP: 2070256144

--- a/src/themelib_sap_fiori_3/src/sap/f/themes/sap_fiori_3_dark/ShellBar.less
+++ b/src/themelib_sap_fiori_3/src/sap/f/themes/sap_fiori_3_dark/ShellBar.less
@@ -10,6 +10,7 @@
 .sapFShellBar {
 	background: @sapUiShellColor;
 	height: 2.75rem;
+	box-shadow: inset 0 -0.0625rem 0 0 @sapUiShellBorderColor;
 	.sapFShellBarOTB {
 		height: 2.75rem;
 	}
