--- a/src/themelib_sap_fiori_3/src/sap/f/themes/sap_fiori_3_hcw/ShellBar.less
+++ b/src/themelib_sap_fiori_3/src/sap/f/themes/sap_fiori_3_hcw/ShellBar.less
@@ -5,6 +5,14 @@
 
 @_sap_f_Shell_Bar_Copilot_Design: dark; // Possible designs are "dark" and "light"
 
+.sapFShellBar {
+	height: 2.75rem;
+	box-shadow: inset 0 -0.0625rem 0 0 @sapUiShellBorderColor;
+	.sapFShellBarOTB {
+		height: 2.75rem;
+		background-color: transparent;
+	}
+}
 .sapFButtonNotifications[data-notifications],
 .sapFShellBarOverflowButton[data-notifications] {
 	&:after {
